tests/kiama/negative/type_errors/L1/7_badeq3.ob
MODULE badeq;

VAR
    bvar : BOOLEAN;

BEGIN
    bvar := bvar = TRUE
END badeq.
